load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "centos7_crio",
    srcs = [
        "image.json",
    ],
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/*.sh"]),
)

pkg_tar(
    name = "packer",
    srcs = [
        ":centos7_crio",
        ":scripts",
    ],
    mode = "0o644",
    package_dir = "centos-7_k8s-universal-packer-config",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "test_centos7_crio",
    srcs = ["packer-validate.sh"],
    args = [
        "$(location //hack:packer_host_bin)",
        "$(location :centos7_crio)",
    ],
    data = [
        ":centos7_crio",
        ":scripts",
        "//hack:packer_host_bin",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
