load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["csr.go"],
    importpath = "github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud/pkg/csr",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["csr_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
