load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "kubectl.go",
        "manifests.go",
    ],
    importpath = "github.com/simonswine/cluster-api-provider-hetzner/pkg/manifests",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fatih_color//:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_google_go_jsonnet//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = ["//manifests:config"],
    embed = [":go_default_library"],
)
