load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["packer.go"],
    importpath = "github.com/simonswine/cluster-api-provider-hcloud/pkg/packer",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/packer/api:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_hetznercloud_hcloud_go//hcloud:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/packer/api:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
