load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "baremetal.go",
        "cluster.go",
        "hcloudClient.go",
        "hrobotClient.go",
        "machine.go",
        "volume.go",
    ],
    importpath = "github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud/pkg/scope",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha4:go_default_library",
        "//pkg/manifests/parameters:go_default_library",
        "//pkg/packer/api:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_hetznercloud_hcloud_go//hcloud:go_default_library",
        "@com_github_nl2go_hrobot_go//:go_default_library",
        "@com_github_nl2go_hrobot_go//models:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_klog//klogr:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha4:go_default_library",
        "@io_k8s_sigs_cluster_api//errors:go_default_library",
        "@io_k8s_sigs_cluster_api//util:go_default_library",
        "@io_k8s_sigs_cluster_api//util/kubeconfig:go_default_library",
        "@io_k8s_sigs_cluster_api//util/patch:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_utils//pointer:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/scope/mock:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["machine_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//api/v1alpha4:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha4:go_default_library",
    ],
)
