load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["parameters.go"],
    importpath = "github.com/simonswine/cluster-api-provider-hetzner/pkg/manifests/parameters",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//pkg/util/intstr:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
