load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "baremetal.go",
        "client.go",
    ],
    importpath = "github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud/pkg/cloud/resources/baremetal",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/cloud/scope:go_default_library",
        "//pkg/cloud/resources/server/userdata:go_default_library",
        "//pkg/record:go_default_library",

        
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_crypto//ssh:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha3:go_default_library",
        "@io_k8s_sigs_cluster_api//bootstrap/kubeadm/api/v1alpha3:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_apiserver//pkg/storage/names:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/cloud/resources/server/userdata:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
