load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bastion_host.go"],
    importpath = "github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud/pkg/cloud/resources/bastionhost",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/cloud/scope:go_default_library",
        "//pkg/cloud/utils:go_default_library",
	    "//pkg/record:go_default_library",
        "//pkg/packer/api:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@com_github_hetznercloud_hcloud_go//hcloud:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_apiserver//pkg/storage/names:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
