load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["floatingip.go"],
    importpath = "github.com/simonswine/cluster-api-provider-hetzner/pkg/cloud/resources/floatingip",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/cloud/scope:go_default_library",
        "@com_github_hetznercloud_hcloud_go//hcloud:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_apiserver//pkg/storage/names:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["floatingip_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/cloud/scope:go_default_library",
        "//pkg/cloud/scope/mock:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_hetznercloud_hcloud_go//hcloud:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha2:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
